# MLOps

./: iforest_pipeline.pkl  index.html  main.py  prediction.html  pyproject.toml  requirements.txt
templates/: index.html
