[tool.poetry]
name = "networktrafficclassification"
version = "0.1.0"
description = "Network Traffic Classification with Anomaly Detection"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "2.2.3"
pandas = "1.5.3"
pycaret = "3.2.0"
werkzeug = "2.2.2"
gunicorn = "20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
